prodMetadata/src/objects/Focus_Area__c.object
<CustomObject>
    <description>A Focus Area is either a Policy Issue (Employment) or an IAVA Campaign (Combat to Careers)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legislative_Agenda_Year__c</fullName>
        <description>Select all years in which this Issue was part of the Legislative Agenda.</description>
        <inlineHelpText>Select all years in which this Issue was part of the Legislative Agenda.</inlineHelpText>
        <label>Legislative Agenda Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_Stats_on_Focus_Area__c</fullName>
        <description>The number of Stat records on the Focus Area record.</description>
        <inlineHelpText>The number of Stat records on the Focus Area record.</inlineHelpText>
        <label>Num Stats on Focus Area</label>
        <summaryForeignKey>Stat_Focus_relationship__c.Related_Focus_Area__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead staffer on research team for this Policy Issue</description>
        <inlineHelpText>Lead staffer on research team for this Policy Issue</inlineHelpText>
        <label>Research Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Custom - Policy</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Policy_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Policy Issue example: &quot;Employment&quot;.  IAVA Program example: &quot;Combat to Careers&quot;</description>
        <inlineHelpText>Policy Issue example: &quot;Employment&quot;.  IAVA Program example: &quot;Combat to Careers&quot;</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Policy Issue</fullName>
                </value>
                <value>
                    <fullName>IAVA Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Focus Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Research_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Focus_Area_Active</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>Research_Lead__c</columns>
        <columns>Overview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Focus Area - Active</label>
    </listViews>
    <listViews>
        <fullName>All_Focus_Area_Inactive</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>Research_Lead__c</columns>
        <columns>Overview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Focus Area - Inactive</label>
    </listViews>
    <listViews>
        <fullName>Appropriations</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Appropriations</label>
    </listViews>
    <listViews>
        <fullName>IAVA_Programs_Active</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Research_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.IAVA_Program</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IAVA Programs - Active</label>
    </listViews>
    <listViews>
        <fullName>IAVA_Programs_All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Research_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.IAVA_Program</value>
        </filters>
        <label>IAVA Programs - All</label>
    </listViews>
    <listViews>
        <fullName>Policy_Issues_Active</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Research_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.Policy_Issue</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Policy Issues - Active</label>
    </listViews>
    <listViews>
        <fullName>Policy_Issues_All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.Policy_Issue</value>
        </filters>
        <label>Policy Issues - All</label>
    </listViews>
    <listViews>
        <fullName>Policy_Issues_my_Active</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Research_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.Policy_Issue</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Policy Issues - my Active</label>
    </listViews>
    <listViews>
        <fullName>Policy_Issues_my_All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>Legislative_Agenda_Year__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Research_Lead__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.Policy_Issue</value>
        </filters>
        <label>Policy Issues - my All</label>
    </listViews>
    <listViews>
        <fullName>RSG_All</fullName>
        <columns>NAME</columns>
        <columns>Research_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Focus_Area__c.Research_Stat_Group</value>
        </filters>
        <label>Research Stat Groups - All</label>
    </listViews>
    <nameField>
        <label>Focus Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Focus Areas</pluralLabel>
    <recordTypes>
        <fullName>IAVA_Program</fullName>
        <active>true</active>
        <label>IAVA Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Policy_Issue</fullName>
        <active>true</active>
        <label>Policy Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research_Stat_Group</fullName>
        <active>true</active>
        <label>Research Stat Group</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>